# Head

- Be more permissive of newlines in strings and formulae
- Raise an Exception if fail to parse a formulae
- Generated ruby tests now ignore differences in newlines in strings

# 0.3.15 - 2015 March 10

- Fixed a bug in VLOOKUP when the lookup value is an empty cell

# 0.3.14 - 2015 March 10

- Fixed bug in ruby version of power
- Now detects and reports more kinds of external references
- Improved the way that the conversion treats newlines and other special characters in strings by dealing with excel unicode escaping of the form _x000D_
- Added missing NUM conversion to ruby interface to C version
- Fixed PMT to return NUM error when number of periods is zero

# 0.3.13 - 2015 March 2

- Roots of negative numbers now return an error, like excel
- Fixed a bug when specifying :all cells in a sheet to be settable, and empty cells on that sheet are referenced

# 0.3.12 - 2015 February 27

- Fixed a bug which meant that COLUMN and ROW and OFFSET functions would sometimes not be correctly replaced
- Tinkered with tests

# 0.3.11 - 2015 February 6

- Implemented the CHAR function in C and Ruby
- Default logging now uses colours to indicate severity

# 0.3.10 - 2015 January 16

- Fix unitialzed constant error

# 0.3.9 - 2015 January 15

- Fix SUBTOTAL to not count other SUBTOTALs
- Tweak the logging of the initial unzip of the excel into xml to be quieter
- Altered the output of the default logger to be less noisy

# 0.3.8 - 2015 January 15

- Tiny wording tweak to the external reference reporting

# 0.3.7 - 2015 January 15

- Reports more detail when it finds an external reference
- Implemented the ISERROR() function

# 0.3.6 - 2014 December 19th

- Fixed a stupid bug causing it always writes the tests in C

# 0.3.5 - 2014 December 18th

- Fixed a bug in the C version of string_join when joining some strings with more than 100 characters