@@ -119,3 +119,5 @@ require_relative 'excel_functions/npv'
 require_relative 'excel_functions/iserror'
 
 require_relative 'excel_functions/char'
+
+require_relative 'excel_functions/address'
