@@ -32,6 +32,10 @@ class Reference < String
     letters
   end
   
+  def self.column_letters_for_column_number
+    @@column_letters_for_column_number
+  end
+  
   attr_reader :excel_row_number, :excel_column_number, :excel_column, :excel_row
   
   def calculate_excel_variables
